# popo-firmware

./: CMakeLists.txt  Kconfig.projbuild  README.md
main/: CMakeLists.txt  audio_manager.c  display_manager.c  led_ring.c  main.c  mood_engine.c  oled_face.c  popo_tts.c  wake_word.c  weather_client.c  wifi_manager.c
main/include/: audio_manager.h  display_manager.h  led_ring.h  mood_engine.h  oled_face.h  popo_tts.h  wake_word.h  weather_client.h  wifi_manager.h
